--- a/site/assets/css/podcast.css
+++ b/site/assets/css/podcast.css
@@ -1,3 +1,4 @@
+/* /site/assets/css/podcast.css */
 .episode-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
