--- a/site/partials/header.html
+++ b/site/partials/header.html
@@ -1,3 +1,4 @@
+<!-- /site/partials/header.html -->
 <!-- Header Partial -->
 <header class="site-header" data-partial="header" role="banner">
   <a class="skip-link" href="#main">Skip to content</a>
