Suppress Press from navigation

--- a/partials/header.html
+++ b/partials/header.html
@@ -22,7 +22,7 @@
         <li><a href="/pages/" data-nav="home">Home</a></li>
         <li><a href="/pages/about/" data-nav="about">About</a></li>
         <li><a href="/pages/resources/" data-nav="resources">Resources</a></li>
-        <li><a href="/pages/press/" data-nav="press">Press</a></li>
+<!--        <li><a href="/pages/press/" data-nav="press">Press</a></li>-->
         <li><a href="/pages/podcast/" data-nav="podcast">Podcast</a></li>
         <li><a href="/pages/contact/" data-nav="contact">Contact</a></li>
         <li><a href="/pages/privacy/" data-nav="privacy">Privacy</a></li>
