--- a/partials/footer.html
+++ b/partials/footer.html
@@ -16,7 +16,7 @@
       <ul class="footer-nav">
         <li><a href="/pages/about/">About</a></li>
         <li><a href="/pages/resources/">Resources</a></li>
-        <!-- <li><a href="/pages/press/">Press</a></li> -->
+        <!-- <!-- <li><a href="/pages/press/">Press</a></li> --> -->
         <li><a href="/pages/podcast/">Podcast</a></li>
         <li><a href="/pages/contact/">Contact</a></li>
         <li><a href="/pages/privacy/">Privacy</a></li>
