Updated nav for blog link.

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -22,6 +22,7 @@
       <ul class="footer-nav">
         <li><a href="/pages/about/">About</a></li>
         <li><a href="/pages/resources/">Resources</a></li>
+        <li><a href="/pages/blog/">Blog</a></li>
         <!-- <li><a href="/pages/press/">Press</a></li> --> 
         <li><a href="/pages/podcast/">Podcast</a></li>
         <li><a href="/pages/contact/">Contact</a></li>
